crates/cribo/tests/snapshots/execution_results@importlib_global_rebinding.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_global_rebinding/main.py
---
ExecutionResults {
    status: Success,
    stdout: "helper imported\nVALUE: helper value",
    stderr: "",
}
