crates/cribo/tests/snapshots/execution_results@importlib_imported_dunder_name.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_imported_dunder_name/main.py
---
ExecutionResults {
    status: Success,
    stdout: "VALUE: provider-value\nsame object: True",
    stderr: "",
}
