crates/cribo/tests/snapshots/execution_results@importlib_module_scope_rebinding.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_module_scope_rebinding/main.py
---
ExecutionResults {
    status: Success,
    stdout: "helper imported\nVALUE: helper value",
    stderr: "",
}
