crates/cribo/tests/snapshots/execution_results@importlib_package_side_effect_replacement.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_package_side_effect_replacement/main.py
---
ExecutionResults {
    status: Success,
    stdout: "replacement",
    stderr: "",
}
