crates/cribo/tests/snapshots/execution_results@importlib_parent_replacement.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_parent_replacement/main.py
---
ExecutionResults {
    status: Success,
    stdout: "bundled package\nreplacement",
    stderr: "",
}
