crates/cribo/tests/snapshots/execution_results@importlib_preloaded_sys_modules.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preloaded_sys_modules/main.py
---
ExecutionResults {
    status: Success,
    stdout: "replacement True",
    stderr: "",
}
