crates/cribo/tests/snapshots/execution_results@importlib_preserved_arg_errors.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_arg_errors/main.py
---
ExecutionResults {
    status: Success,
    stdout: "TypeError raised before target import\neffectful_helper imported\nVALUE: effectful value",
    stderr: "",
}
