crates/cribo/tests/snapshots/execution_results@importlib_preserved_dotted.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_dotted/main.py
---
ExecutionResults {
    status: Success,
    stdout: "before load\npkg package initialized\npkg.sub initialized\nVALUE: sub value\nPARENT: pkg-init",
    stderr: "",
}
