crates/cribo/tests/snapshots/execution_results@importlib_preserved_failing_retry.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_failing_retry/main.py
---
ExecutionResults {
    status: Success,
    stdout: "flaky_helper body runs\nattempt 1: flaky_helper exploded\nflaky_helper body runs\nattempt 2: flaky_helper exploded",
    stderr: "",
}
